Fixed app height and scroll posiblity. Added react-scale-text.

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,13 @@
     <head>
         <meta charset="utf-8" />
         <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
-        <meta
+        <!-- <meta
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
-        />
+        /> -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Document</title>
         <meta name="theme-color" content="#FFFFFF" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <title>Re|word</title>
