--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+        <link rel="icon" type="image/svg+xml" href="assets/favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Vite + React + TS</title>
+        <title>Re|word</title>
     </head>
     <body>
         <div id="root"></div>
         <div id="modals"></div>
-        <script type="module" src="/src/main.tsx"></script>
+        <script type="module" src="./main.tsx"></script>
     </body>
 </html>
