--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,14 @@
         <meta charset="UTF-8" />
         <link rel="icon" type="image/svg+xml" href="assets/favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&family=Ubuntu+Mono&display=swap"
+            rel="stylesheet"
+        />
+
         <title>Re|word</title>
     </head>
     <body>
