--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="assets/favicon.png" />
+        <link rel="icon" type="image/png" href="./assets/favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -11,12 +11,11 @@
             href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,700;1,400&family=Ubuntu+Mono&display=swap"
             rel="stylesheet"
         />
-
         <title>Re|word</title>
     </head>
     <body>
         <div id="root"></div>
         <div id="modals"></div>
-        <script type="module" src="./main.tsx"></script>
+        <script type="module" src="./src/main.tsx"></script>
     </body>
 </html>
